[build-system]
requires = ["setuptools == 68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyInfinityFlow"
version = "0.1.0.9"
authors = [
  { name="Kyle Ferchen", email="ferchenkyle@gmail.com" },
]
description = "Impute Flow Cytometry values between overlapping panels with XGBoost regression."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KyleFerchen/pyInfinityFlow"
"Bug Tracker" = "https://github.com/KyleFerchen/pyInfinityFlow/issues"

[project.optional-dependencies]
doc = [
  "sphinx~=4.5.0",
  "myst-parser",
  "nbsphinx",
]
