[build-system]
requires = ["setuptools == 68.2.2"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "umap-learn>=0.5",
  "xgboost>=1.6",
  "scanpy>=1.9",
  "pyarrow>=9.0",
  "leidenalg"
]
name = "pyInfinityFlow"
version = "1.0.0"
authors = [
  { name="Kyle Ferchen", email="ferchenkyle@gmail.com" },
]
description = "Impute Flow Cytometry values between overlapping panels with XGBoost regression."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[project.scripts]
pyInfinityFlow = "pyInfinityFlow.pyInfinityFlow:main"
pyInfinityFlow-list_channels = "pyInfinityFlow.pyInfinityFlow_list_channels:main"

[project.urls]
"Homepage" = "https://github.com/KyleFerchen/pyInfinityFlow"
"Bug Tracker" = "https://github.com/KyleFerchen/pyInfinityFlow/issues"

[project.optional-dependencies]
doc = [
  "sphinx~=4.5.0",
  "myst-parser",
  "nbsphinx",
]
